| Bug #3214 | mysqlbinlog --read-from-remote-server --position prints wrong positions | ||
|---|---|---|---|
| Submitted: | 17 Mar 2004 16:19 | Modified: | 20 Mar 2004 7:44 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 4.0 | OS: | Any (all) |
| Assigned to: | Guilhem Bichot | Target Version: | |
[17 Mar 2004 16:19]
Guilhem Bichot
[20 Mar 2004 7:44]
Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Fixed in 4.1 in ChangeSet@1.1704, 2004-03-18 20:53:33+02:00, guilhem@mysql.com
