Fix for BUG#3214 "mysqlbinlog --read-from-remote-server --position prints wrong positions" I am fixing it here in 4.1, not in 4.0, as it goes with another change which I did in 4.1 (fix for BUG#3204 ""mysqlbinlog --read-from-remote-server this_binlog.001" prints all binlogs").

client/mysqlbinlog.cc:
  correcting code to compute the position right when we are reading
  a remote binlog.